# lls-auth-client

./: .gitignore  README.md  keycloak_setup.sh  pyproject.toml  requirements.txt  run.yaml
docs/: MODULE1.md  MODULE2.md
docs/diagrams/: current-lls-flow.mmd  delegated-tkex-attes.mmd  flow.mmd  zts-lls-flow.mmd
lls_auth_client/: auth.py  client.py  config.py  main.py
lls_auth_client/routes/: invoke.py
